[project]
name = "deep-learning-image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
]
